2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-15 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 1 entailed us to do. (Send HTTP 1.0 Response)

2014-01-22 Jeff Johnson <john3209@msu.edu>

 * Made fixes to Homework 1. - Updated \n to \r\n

2014-01-22 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 2 had us do. This includes:

 * Made server.py testable and added tests.

 * Made different responses for POST requests and different paths.

2014-01-23 Justin Fila <filajust@msu.edu>

 * Looks great! I found one index out of bounds error, left a comment where
 * I think it can be fixed

2014-01-29 Jeff Johnson <john3209@msu.edu>

 * Fixed indexing error that would arise when using Mozilla.

2014-01-30 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 3 had us do. This includes:

 * Handling form submissions using both GET and POST.

2014-02-06 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 4 has us do. This includes:

 * Handling mutipart/form-data content types.

 * Make arbitrary size requests.

 * Added HTML templating.

 * Added 404 Error catching.

2014-02-12 Jeff Johnson <john3209@msu.edu>

 * Made changes Homework 5 had us do. This includes:

 * Made app WSGI-compatible.

 * Made server WSGI-compatible.

 * Added template inheritance.